--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+bin/
+build/
+eclipse/
+gradle/
+.gradle/
+.settings/
+.classpath
+.project
+.DS_Store
+Thumbs.db
+gradlew
+gradlew.bat
+Mod Update Process.txt
