--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'forge'
 
 version = ""
 group= "chylex.hee.HardcoreEnderExpansion" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "HardcoreEnderExpansion  MC-"
+archivesBaseName = "HardcoreEnderExpansion  MC-1.7.10  v1."
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
