--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -3,6 +3,7 @@
 public net.minecraft.util.RegistrySimple field_82596_a # registryObjects
 public net.minecraft.util.RegistryNamespaced field_148759_a # underlyingIntegerMap
 public net.minecraft.entity.EntityLivingBase field_110153_bc # lastDamage
+public net.minecraft.entity.EntityLiving field_82174_bp # equipmentDropChances
 public net.minecraft.entity.Entity field_70151_c # fire
 public net.minecraft.entity.monster.EntityGhast field_70792_g # targetedEntity
 public net.minecraft.network.NetHandlerPlayServer field_147365_f # floatingTickCount
