Table redstone signal, Extraction table work, AT'd sky biome

--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -11,6 +11,7 @@ public net.minecraft.network.NetHandlerPlayServer field_147373_o # lastPosX
 public net.minecraft.network.NetHandlerPlayServer field_147382_p # lastPosY
 public net.minecraft.network.NetHandlerPlayServer field_147381_q # lastPosZ
 public net.minecraft.world.gen.ChunkProviderEnd field_73204_i # endRNG
+public-f net.minecraft.world.biome.BiomeGenBase field_76779_k # sky
 
 public net.minecraft.client.Minecraft field_147126_aw # mcMusicTicker
 public net.minecraft.client.gui.inventory.GuiContainer field_146999_f # xSize
