--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -12,6 +12,7 @@ public net.minecraft.network.NetHandlerPlayServer field_147382_p # lastPosY
 public net.minecraft.network.NetHandlerPlayServer field_147381_q # lastPosZ
 public net.minecraft.world.gen.ChunkProviderEnd field_73204_i # endRNG
 public-f net.minecraft.world.biome.BiomeGenBase field_76779_k # sky
+public net.minecraft.world.World field_73020_y # chunkProvider
 
 public net.minecraft.client.Minecraft field_147126_aw # mcMusicTicker
 public net.minecraft.client.gui.inventory.GuiContainer field_146999_f # xSize
