--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ targetCompatibility = 1.7
 
 minecraft {
     version = "1.7.10-10.13.2.1258"
-    assetDir = "eclipse/assets"
+    runDir = "eclipse"
 }
 
 processResources {
