--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -1,11 +1,10 @@
-# C:\Gradle\caches\minecraft\net\minecraftforge\forge\1.7.10-10.13.0.1208\unpacked\conf
+# C:\Gradle\caches\minecraft\net\minecraftforge\forge\1.8-11.14.0.1289-1.8\unpacked\conf
 
 public net.minecraft.util.RegistrySimple field_82596_a # registryObjects
 public net.minecraft.util.RegistryNamespaced field_148759_a # underlyingIntegerMap
 public net.minecraft.entity.EntityLivingBase field_110153_bc # lastDamage
 public net.minecraft.entity.EntityLiving field_82174_bp # equipmentDropChances
 public net.minecraft.entity.Entity field_70151_c # fire
-public net.minecraft.entity.monster.EntityGhast field_70792_g # targetedEntity
 public net.minecraft.network.NetHandlerPlayServer field_147365_f # floatingTickCount
 public net.minecraft.network.NetHandlerPlayServer field_147373_o # lastPosX
 public net.minecraft.network.NetHandlerPlayServer field_147382_p # lastPosY
