--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -2,9 +2,10 @@
 
 public net.minecraft.util.RegistrySimple field_82596_a # registryObjects
 public net.minecraft.util.RegistryNamespaced field_148759_a # underlyingIntegerMap
-public net.minecraft.entity.EntityLivingBase field_110153_bc # lastDamage
-public net.minecraft.entity.EntityLiving field_82174_bp # equipmentDropChances
 public net.minecraft.entity.Entity field_70151_c # fire
+public net.minecraft.entity.Entity field_70121_D # boundingBox
+public net.minecraft.entity.EntityLiving field_82174_bp # equipmentDropChances
+public net.minecraft.entity.EntityLivingBase field_110153_bc # lastDamage
 public net.minecraft.network.NetHandlerPlayServer field_147365_f # floatingTickCount
 public net.minecraft.network.NetHandlerPlayServer field_147373_o # lastPosX
 public net.minecraft.network.NetHandlerPlayServer field_147382_p # lastPosY
