--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -14,6 +14,8 @@ public net.minecraft.world.gen.ChunkProviderEnd field_73204_i # endRNG
 public-f net.minecraft.world.biome.BiomeGenBase field_76779_k # sky
 public net.minecraft.world.World field_73020_y # chunkProvider
 
+public net.minecraft.entity.item.EntityItem func_70289_a(Lnet/minecraft/entity/item/EntityItem;)Z # combineItems
+
 public net.minecraft.client.Minecraft field_147126_aw # mcMusicTicker
 public net.minecraft.client.gui.inventory.GuiContainer field_146999_f # xSize
 public net.minecraft.client.gui.inventory.GuiContainer field_147000_g # ySize
