--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -2,6 +2,7 @@
 
 public net.minecraft.util.RegistrySimple field_82596_a # registryObjects
 public net.minecraft.util.RegistryNamespaced field_148759_a # underlyingIntegerMap
+public-f net.minecraft.item.ItemBlock field_150939_a # block
 public net.minecraft.entity.EntityLivingBase field_110153_bc # lastDamage
 public net.minecraft.entity.EntityLiving field_82174_bp # equipmentDropChances
 public net.minecraft.entity.Entity field_70151_c # fire
