--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 minecraft {
-    version = "1.7.10-10.13.2.1291"
+    version = "1.7.10-10.13.3.1374-1.7.10"
     runDir = "eclipse"
 }
 
