--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript{
 }
 
 dependencies{
-    shade files('libs/Java8Checker  MC-1.7.10  v1.1-src.jar')
+    shade files('libs/Java8Checker  MC-1.7.10  v1.1.jar')
 }
 
 apply plugin: 'forge'
