--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript{
 }
 
 dependencies{
-    shade files('libs/Java8Checker  MC-1.7.10  v1.1.jar')
+    shade files('libs/Java8Checker  MC-1.7.10  v1.1-shade.jar')
 }
 
 apply plugin: 'forge'
@@ -56,12 +56,13 @@ jar{
     
     configurations.shade.each{ dep ->
         from(project.zipTree(dep)){
-            exclude 'META-INF', 'META-INF/**'
+            exclude 'META-INF', 'META-INF/**', 'mcmod.info'
         }
     }
     
     manifest{
         attributes 'FMLAT': 'hee_at.cfg'
-        attributes 'FMLCorePlugin': 'chylex.javacheck.Java8CheckerCoremod'
+        attributes 'FMLCorePlugin': 'chylex.shade.javacheck.Java8CheckerCoremod'
+        attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
