--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript{
 }
 
 dependencies{
-    shade files('libs/Java8Checker  MC-1.7.10  v1.1-shade.jar')
+    shade files('libs/JavaCheckerShade  MC-UNIVERSAL  v1.2.jar')
 }
 
 apply plugin: 'forge'
@@ -62,7 +62,6 @@ jar{
     
     manifest{
         attributes 'FMLAT': 'hee_at.cfg'
-        attributes 'FMLCorePlugin': 'chylex.shade.javacheck.Java8CheckerCoremod'
-        attributes 'FMLCorePluginContainsFMLMod': 'true'
+        attributes 'TweakClass': 'chylex.shade.javacheck.Java8Checker'
     }
 }
