Add a config to pause the game when Compendium is open

--- a/src/main/resources/META-INF/hee_at.cfg
+++ b/src/main/resources/META-INF/hee_at.cfg
@@ -18,6 +18,7 @@ public net.minecraft.world.gen.ChunkProviderEnd field_73204_i # endRNG
 public-f net.minecraft.world.biome.BiomeGenBase field_76779_k # sky
 public net.minecraft.world.World field_73020_y # chunkProvider
 
+public net.minecraft.client.Minecraft field_71428_T # timer
 public net.minecraft.client.Minecraft field_147126_aw # mcMusicTicker
 public net.minecraft.client.gui.inventory.GuiContainer field_146999_f # xSize
 public net.minecraft.client.gui.inventory.GuiContainer field_147000_g # ySize
