Change the name of the music resource pack file

--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ minecraft{
 
 task createResourcePack(type: Zip){
     from "music"
-    archiveName "Hardcore Ender Expansion  Music  v1.0.zip"
+    archiveName "HEE Music v1.0.zip"
     destinationDir = file("build/libs")
 }
 
