--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ targetCompatibility = 1.7
 
 minecraft {
     version = "1.7.10-10.13.3.1408-1.7.10"
-    runDir = "eclipse"
+    runDir = "run"
 }
 
 task createResourcePack(type: Zip){
