--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 minecraft{
-    version = "1.7.10-10.13.4.1492-1.7.10"
-    runDir = "eclipse"
+    version = "1.7.10-10.13.4.1614-1.7.10"
+    runDir = "run"
     
     srgExtra "PK: chylex/javacheck chylex/shade/javacheck"
 }
